--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       # - name: Install 📦
       #   run: npm ci --production
 
-      # - name: Build 🔧
-      #   run: npm run build
+      - name: Build 🔧
+        run: npm run build
 
       - name: Test
         run: |
