--- a/src/vanilla-auth-form/package.json
+++ b/src/vanilla-auth-form/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --out-dir dist",
+    "build": "parcel build src/index.html --out-dir dist --public-url '.'",
     "serve": "serve dist",
     "deploy": "now",
     "clean": "rimraf dist .cache .parcel-cache dist",
