--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      # - name: Install 📦
-      #   run: npm ci --production
+      - name: Install 📦
+        run: npm ci --production
 
       - name: Build 🔧
         run: node scripts/build.js
