--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ node_modules/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# Next.js build output
-.next
+# Vercel
+.vercel
 
 # MacOS trash
 .DS_Store
 
 # Built
 dist
+
