--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.7",
+    "monaco-editor": "^0.23.0",
     "svelte": "^3.37.0",
     "svelte-preprocess": "^4.7.2",
     "svelte-routing": "^1.6.0",
