--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.7",
     "monaco-editor": "^0.23.0",
     "svelte": "^3.37.0",
+    "svelte-loading-spinners": "^0.1.4",
     "svelte-preprocess": "^4.7.2",
     "svelte-routing": "^1.6.0",
     "typescript": "^4.2.4",
