--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "postinstall": "chmod +x ./scripts/build-projects.sh && ./scripts/build-projects.sh"
+    "postinstall": "node scripts/build-projects.mjs"
   },
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.7",
+    "execa": "^5.0.0",
     "monaco-editor": "^0.23.0",
     "svelte": "^3.37.0",
     "svelte-loading-spinners": "^0.1.4",
@@ -20,5 +21,8 @@
     "svelte-routing": "^1.6.0",
     "typescript": "^4.2.4",
     "vite": "^2.2.1"
+  },
+  "volta": {
+    "node": "14.16.1"
   }
 }
