--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "demos",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/albertmolodec/demos.git"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "postinstall": "node scripts/build-projects.mjs"
-  },
-  "dependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.9",
-    "execa": "^5.0.0",
-    "monaco-editor": "^0.23.0",
-    "svelte": "^3.38.2",
-    "svelte-loading-spinners": "^0.1.4",
-    "svelte-preprocess": "^4.7.3",
-    "svelte-routing": "^1.6.0",
-    "typescript": "^4.2.4",
-    "vite": "^2.2.4"
-  },
-  "volta": {
-    "node": "14.16.1"
-  }
+	"name": "demos",
+	"version": "1.0.0",
+	"type": "module",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/kitcat-dev/demos.git"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview",
+		"postinstall": "node scripts/build-projects.mjs"
+	},
+	"dependencies": {
+		"@sveltejs/vite-plugin-svelte": "3.0.2",
+		"execa": "8.0.1",
+		"monaco-editor": "0.47.0",
+		"svelte": "4.2.12",
+		"svelte-loading-spinners": "0.3.6",
+		"svelte-preprocess": "5.1.3",
+		"svelte-routing": "2.12.0",
+		"typescript": "5.4.4",
+		"vite": "5.2.8"
+	}
 }
