--- a/public/projects/usa-map/package.json
+++ b/public/projects/usa-map/package.json
@@ -12,7 +12,8 @@
 		"@mui/icons-material": "5.15.15",
 		"@mui/material": "5.15.15",
 		"@tsconfig/node20": "20.1.4",
-		"html-webpack-plugin": "^5.6.0",
+		"html-webpack-plugin": "5.6.0",
+		"msw": "^2.2.13",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"ts-loader": "9.5.1",
@@ -21,7 +22,7 @@
 		"webpack-dev-server": "5.0.4"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.74",
-		"@types/react-dom": "^18.2.24"
+		"@types/react": "18.2.74",
+		"@types/react-dom": "18.2.24"
 	}
 }
