--- a/public/projects/usa-map/package.json
+++ b/public/projects/usa-map/package.json
@@ -12,10 +12,12 @@
 		"@mui/icons-material": "5.15.15",
 		"@mui/material": "5.15.15",
 		"@tsconfig/node20": "20.1.4",
+		"copy-webpack-plugin": "^12.0.2",
 		"html-webpack-plugin": "5.6.0",
 		"msw": "^2.2.13",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"swr": "^2.2.5",
 		"ts-loader": "9.5.1",
 		"webpack": "5.91.0",
 		"webpack-cli": "5.1.4",
