--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "3.0.2",
 		"execa": "5.0.0",
+		"fluent-svelte": "^1.6.0",
 		"monaco-editor": "0.47.0",
 		"svelte": "4.2.12",
 		"svelte-loading-spinners": "0.3.6",
+		"svelte-markdown": "^0.4.1",
 		"svelte-preprocess": "5.1.3",
 		"svelte-routing": "2.12.0",
 		"typescript": "5.4.4",
