--- a/public/projects/element-widget/package.json
+++ b/public/projects/element-widget/package.json
@@ -3,20 +3,19 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "webpack serve --mode development --open",
-		"build": "webpack"
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@tsconfig/node20": "20.1.4",
-		"html-webpack-plugin": "5.6.0",
+		"@vitejs/plugin-react-swc": "3.6.0",
 		"mobx": "6.12.3",
 		"mobx-react-lite": "4.0.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"ts-loader": "9.5.1",
-		"webpack": "5.91.0",
-		"webpack-cli": "5.1.4",
-		"webpack-dev-server": "5.0.4"
+		"typescript": "5.4.5",
+		"typescript-plugin-css-modules": "5.1.0",
+		"vite": "5.2.8"
 	},
 	"devDependencies": {
 		"@types/react": "18.2.75",
