--- a/public/projects/usa-map/package.json
+++ b/public/projects/usa-map/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"@types/react": "18.2.74",
-		"@types/react-dom": "18.2.24"
+		"@types/react-dom": "18.2.24",
+		"@types/node": "20.12.7"
 	}
 }
