--- a/public/projects/element-widget/package.json
+++ b/public/projects/element-widget/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build",
+		"build": "vite build --base=/projects/element-widget/dist/",
 		"preview": "vite preview"
 	},
 	"dependencies": {
