--- a/public/projects/element-widget/tsconfig.json
+++ b/public/projects/element-widget/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "target": "es2022",
+    "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
@@ -21,6 +21,7 @@
     "jsx": "react-jsx",
 
     "useDefineForClassFields": true, // for mobx
+
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
