--- a/public/projects/element-widget/package.json
+++ b/public/projects/element-widget/package.json
@@ -14,12 +14,14 @@
 		"mobx-react-lite": "4.0.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-window": "1.8.10",
 		"typescript": "5.4.5",
 		"typescript-plugin-css-modules": "5.1.0",
 		"vite": "5.2.8"
 	},
 	"devDependencies": {
-		"@types/react": "18.2.75",
-		"@types/react-dom": "18.2.24"
+		"@types/react": "18.2.77",
+		"@types/react-dom": "18.2.25",
+		"@types/react-window": "1.8.8"
 	}
 }
