show list with checkboxes

--- a/public/projects/element-widget/tsconfig.json
+++ b/public/projects/element-widget/tsconfig.json
@@ -12,6 +12,7 @@
     "noEmit": true,
 
     "strict": true,
+    "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
 
     "outDir": "dist",
