--- a/public/projects/chat/package.json
+++ b/public/projects/chat/package.json
@@ -8,22 +8,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.396.0",
     "mobx": "6.12.3",
     "mobx-react-lite": "4.0.7",
     "mobx-state-tree": "6.0.0",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.4.5",
+    "vaul": "^0.9.1",
     "vite": "5.2.8",
-    "vitest": "1.6.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "vitest": "1.6.0"
   },
   "devDependencies": {
+    "@types/node": "20.14.7",
     "@types/react": "18.2.77",
-    "@types/react-dom": "18.2.25",
-    "@types/node": "20.14.7"
+    "@types/react-dom": "18.2.25"
   }
 }
